examples/misc/error/execution/index1.bfml
let main = $

$build {
  a: array(_) {
    i: index
  }
}

< a@i